GitVersion1/objects/Target__c.object
<CustomObject>
    <description>Custom Replica of Standard Territory Object to Control the Custom entities</description>
    <fields>
        <fullName>Employee_Link_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Link To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grand_Parent_TerritoryId__c</fullName>
        <label>Grand Parent TerritoryId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_TerritoryId__c</fullName>
        <description>This Field standard parent territory ID</description>
        <label>Parent TerritoryId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_LinkTo_Emp__c</fullName>
        <description>Holds the old Link to Employee Id</description>
        <label>Previous LinkTo Emp</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Territory_Id__c</fullName>
        <description>Stores old Linked Territory Id</description>
        <label>Previous Territory Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerrEmpName__c</fullName>
        <formula>Name +&apos; - &apos;+ Employee_Link_To__r.FirstName + Employee_Link_To__r.LastName</formula>
        <label>TerrEmpName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Id__c</fullName>
        <description>Standard Territory Id</description>
        <label>Territory Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Target_Field__c</fullName>
        <description>This field is a unique combination of Target Name and employee linked user</description>
        <label>Unique Target Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>